fix: neutered file system docs: add filter params to api docs
