# routes/api/summary.go
@@ -41,6 +41,12 @@ func (h *SummaryApiHandler) RegisterRoutes(router *mux.Router) {
 // @Param from query string false "Start date (e.g. '2021-02-07')"
 // @Param to query string false "End date (e.g. '2021-02-08')"
 // @Param recompute query bool false "Whether to recompute the summary from raw heartbeat or use cache"
+// @Param project query string false "Project to filter by"
+// @Param language query string false "Language to filter by"
+// @Param editor query string false "Editor to filter by"
+// @Param operating_system query string false "OS to filter by"
+// @Param machine query string false "Machine to filter by"
+// @Param label query string false "Project label to filter by"
 // @Security ApiKeyAuth
 // @Success 200 {object} models.Summary
 // @Router /summary [get]
