# routes/compat/wakatime/v1/stats.go
@@ -50,6 +50,12 @@ func (h *StatsHandler) RegisterRoutes(router *mux.Router) {
 // @Produce json
 // @Param user path string true "User ID to fetch data for (or 'current')"
 // @Param range path string false "Range interval identifier" Enums(today, yesterday, week, month, year, 7_days, last_7_days, 30_days, last_30_days, 12_months, last_12_months, any)
+// @Param project query string false "Project to filter by"
+// @Param language query string false "Language to filter by"
+// @Param editor query string false "Editor to filter by"
+// @Param operating_system query string false "OS to filter by"
+// @Param machine query string false "Machine to filter by"
+// @Param label query string false "Project label to filter by"
 // @Security ApiKeyAuth
 // @Success 200 {object} v1.StatsViewModel
 // @Router /compat/wakatime/v1/users/{user}/stats/{range} [get]
