# routes/compat/wakatime/v1/summaries.go
@@ -52,6 +52,12 @@ func (h *SummariesHandler) RegisterRoutes(router *mux.Router) {
 // @Param range query string false "Range interval identifier" Enums(today, yesterday, week, month, year, 7_days, last_7_days, 30_days, last_30_days, 12_months, last_12_months, any)
 // @Param start query string false "Start date (e.g. '2021-02-07')"
 // @Param end query string false "End date (e.g. '2021-02-08')"
+// @Param project query string false "Project to filter by"
+// @Param language query string false "Language to filter by"
+// @Param editor query string false "Editor to filter by"
+// @Param operating_system query string false "OS to filter by"
+// @Param machine query string false "Machine to filter by"
+// @Param label query string false "Project label to filter by"
 // @Security ApiKeyAuth
 // @Success 200 {object} v1.SummariesViewModel
 // @Router /compat/wakatime/v1/users/{user}/summaries [get]
