# static/docs/swagger.json
@@ -298,6 +298,42 @@
                         "description": "Range interval identifier",
                         "name": "range",
                         "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project to filter by",
+                        "name": "project",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Language to filter by",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Editor to filter by",
+                        "name": "editor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "OS to filter by",
+                        "name": "operating_system",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Machine to filter by",
+                        "name": "machine",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project label to filter by",
+                        "name": "label",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -364,6 +400,42 @@
                         "type": "string",
                         "description": "End date (e.g. '2021-02-08')",
                         "name": "end",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project to filter by",
+                        "name": "project",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Language to filter by",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Editor to filter by",
+                        "name": "editor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "OS to filter by",
+                        "name": "operating_system",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Machine to filter by",
+                        "name": "machine",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project label to filter by",
+                        "name": "label",
                         "in": "query"
                     }
                 ],
@@ -703,6 +775,42 @@
                         "type": "boolean",
                         "description": "Whether to recompute the summary from raw heartbeat or use cache",
                         "name": "recompute",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project to filter by",
+                        "name": "project",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Language to filter by",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Editor to filter by",
+                        "name": "editor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "OS to filter by",
+                        "name": "operating_system",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Machine to filter by",
+                        "name": "machine",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project label to filter by",
+                        "name": "label",
                         "in": "query"
                     }
                 ],
